# python-fastapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 85318a34438d_create_products_table.py  b6d5f1088ba4_init.py
docs/: plan-product-crud.md
src/contexts/catalog/application/: dtos.py
src/contexts/catalog/application/use_cases/: create_product.py  delete_product.py  get_product.py  list_products.py  update_product.py
src/contexts/catalog/domain/: exceptions.py  product.py
src/contexts/catalog/domain/ports/: product_repository.py
src/contexts/catalog/infrastructure/persistence/: mappers.py  models.py  sqlalchemy_product_repository.py
src/contexts/catalog/ui/: dependencies.py  schemas.py
src/contexts/catalog/ui/routers/: products.py
src/shared/domain/: errors.py
src/shared/infrastructure/: database.py  exception_handlers.py  settings.py
tests/: conftest.py
tests/e2e/: conftest.py  test_health.py  test_products.py
tests/integration/: conftest.py
tests/integration/contexts/catalog/infrastructure/: test_sqlalchemy_product_repository.py
tests/unit/contexts/catalog/application/: conftest.py  test_create_product.py  test_delete_product.py  test_get_product.py  test_list_products.py  test_update_product.py
tests/unit/contexts/catalog/domain/: test_product.py
